[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "bugmon"
version = "5.1.1"
description = "A python module for analyzing SpiderMonkey and Firefox bugs"
readme = "README.md"
keywords = [ "bisection", "fuzz", "fuzzing", "security", "test", "testing" ]
license = "MPL-2.0"
maintainers = [ { email = "fuzzing@mozilla.com", name = "Mozilla Fuzzing Team" } ]
authors = [
  { email = "choller@mozilla.com", name = "Christian Holler" },
  { email = "jkratzer@mozilla.com", name = "Jason Kratzer" },
]
requires-python = ">=3.10,<4.0"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "autobisect>=9,<10",
  "bugsy @ git+https://github.com/AutomatedTester/Bugsy.git",
  "fuzzfetch>=16.1,<17",
  "typing-extensions>=4.2,<5",
]
urls.Homepage = "https://github.com/MozillaSecurity/bugmon"
urls.Repository = "https://github.com/MozillaSecurity/bugmon"
scripts = { bugmon = "bugmon.main:main" }

[dependency-groups]
dev = [
  "black>=25.1",
  "codecov-cli>=11.0.3",
  "coverage[toml]>=7.9.1",
  "flake8>=7.2",
  "flake8-isort>=6",
  "flake8-quotes>=3.3.2",
  "gitlint>=0.19.1",
  "mypy>=1.16.1",
  "pre-commit>=4.2",
  "pylint>=3.3.7",
  "pyproject-fmt>=2",
  "pytest>=8.4.1",
  "pytest-black>=0.6",
  "pytest-cov>=6",
  "pytest-mock>=3",
  "pytest-pylint>=0.21",
  "pytest-recording>=0.13.2",
  "python-semantic-release>=10.1",
  "types-requests>=2.31.0.10",
]

[tool.hatch]
build.targets.sdist.include = [ "/src", "/tests" ]
build.targets.wheel.packages = [ "src/bugmon" ]
metadata.allow-direct-references = true

[tool.isort]
force_sort_within_sections = false
known_first_party = "bugmon"
profile = "black"

[tool.pylint]
format.max-line-length = 88
master.load-plugins = "pylint.extensions.docparams,pylint.extensions.docstyle"
messages_control.disable = [
  "fixme",
  "invalid-name",
  "line-too-long",
  "logging-format-interpolation",
  "logging-fstring-interpolation",
  "missing-module-docstring",
  "missing-return-doc",
  "missing-yield-doc",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-positional-arguments",
  "too-many-return-statements",
  "too-many-statements",
  "useless-object-inheritance"
]

[tool.pytest]
ini_options.log_level = "DEBUG"

[tool.coverage]
run.omit = [ "*/.egg/*", "*/build/*", "*/dist/*", "*/setup.py", "*/tests/*" ]
run.source_pkgs = [ "bugmon" ]
report.exclude_lines = [ "pragma: no cover" ]

[tool.mypy]
disallow_subclassing_any = "False"
ignore_missing_imports = "True"
implicit_reexport = "True"
strict = "True"

[tool.semantic_release]
build_command = "uv build"
commit_message = "chore(release): {version} [skip ci]"
version_toml = [ "pyproject.toml:project.version" ]
